force-app/main/default/objects/TwilioSF__Media__c/TwilioSF__Media__c.object-meta.xml
<CustomObject>
    <label>Twilio Media</label>
    <nameField>
        <displayFormat>M-{0000000000}</displayFormat>
        <label>Twilio Media Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>