force-app/main/default/objects/TwilioSF__Media__c/fields/TwilioSF__Content_Type__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Content_Type__c</fullName>
    <label>Content-Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>