force-app/main/default/objects/TwilioSF__Media__c/fields/TwilioSF__Media__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Media__c</fullName>
    <formula>HYPERLINK(TwilioSF__Uri__c, IMAGE(TwilioSF__Uri__c, &quot;Twilio Media&quot;,100, 100))</formula>
    <label>Media</label>
    <type>Text</type>
</CustomField>