force-app/main/default/objects/TwilioSF__Media__c/fields/TwilioSF__Message_SID__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Message_SID__c</fullName>
    <externalId>true</externalId>
    <label>Message SID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>