force-app/main/default/objects/TwilioSF__Media__c/fields/TwilioSF__Twilio_Message__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Twilio_Message__c</fullName>
    <label>Twilio Message</label>
    <referenceTo>TwilioSF__Message__c</referenceTo>
    <relationshipLabel>Twilio Medias</relationshipLabel>
    <relationshipName>Medias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>