force-app/main/default/objects/TwilioSF__Media__c/fields/TwilioSF__Uri__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Uri__c</fullName>
    <label>Uri</label>
    <length>255</length>
    <type>Text</type>
</CustomField>